# BillionRow

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENCE  README.md  vcpkg.json
src/: AggregateData.cpp  CreateFile.py  DuplicateFileSize.py  GenerateData.cpp
